--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header-container">
+          <img class="logo" src="/assets/img/gilbert.jpg"/>
+          <div class="header-title">
+            <h2>DIMA KOLONTAI</h2>
+            <hr width="150px" size="3px" color="white"/>
+            <p>Junior frontend-developer</p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <div class="container main-container">
+        <section class="section" >
+          <h2 class="section-title">Contacts</h2>
+          <ul class="section-list">
+            <li class="section-item">Hlubokoe,Belarus</li>
+            <li class="section-item">EMAIL:<a href="http://kolontai4@gmail.com/">kolontai4@gmail.com</a></li>
+            <li class="section-item">Github:<a href="https://github.com/Dmitry863">Dmitry863</a></li>
+            <li class="section-item">Discord:<a href="https://discord.com/channels/@me">Dimitry#4461</a></li>
+          </ul>
+        </section>
+        <section class="section" id="summary">
+          <h2 class="section-title">Summary</h2>
+          <p>
+            I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.
+          </p>
+        </section>
+        <section class="section" id="skills">
+          <h2 class="section-title">Skills</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              Web-development:<span> HTML5, CSS3, JavaScript</span>
+            </li>
+            <li class="section-item">
+              Frameworks and libraries:<span> React</span>
+            </li>
+            <li class="section-item">
+              Version control:<span> GIT, Github</span>
+            </li>
+            <li class="section-item">
+              Graphics:<span> Figma</span>
+            </li>
+          </ul>
+        </section>
+        <section class="section " >
+          <h2 class="section-title">Education</h2>
+          <p>
+            VITEBSK BRANCH OF THE BELARUSIAN STATE ACADEMY OF COMMUNICATIONS
+          </p>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container footer-container">
+        <div>© 2022 <a href="https://github.com/Dmitry863" class="github nav-link">Dmitry863</a></div>
+        <a href="https://rs.school/js/" class="rss"><img class="rss" src="/assets/img/rs_school_js.svg" alt="logo"/></a>
+      </div>
+    </footer>
+  </body>
