init: start mentor-dashboard task

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header class="header">
       <div class="container">
         <div class="header-container">
-          <img class="logo" src="/assets/img/gilbert.jpg"/>
+          <img class="logo" src="/assets/img/gilbert.jpg" alt="logo"/>
           <div class="header-title">
             <h2>DIMA KOLONTAI</h2>
-            <hr width="150px" size="3px" color="white"/>
+            <hr/>
             <p>Junior frontend-developer</p>
           </div>
         </div>
