--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="/assets/img/gilbert.jpg" />
+    <link rel="icon" href="assets/img/gilbert.jpg" />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="header-container">
-          <img class="logo" src="/assets/img/gilbert.jpg" alt="logo"/>
+          <img class="logo" src="assets/img/gilbert.jpg" alt="logo"/>
           <div class="header-title">
             <h2>DIMA KOLONTAI</h2>
             <hr/>
@@ -66,7 +66,7 @@
     <footer class="footer">
       <div class="container footer-container">
         <div>© 2022 <a href="https://github.com/Dmitry863" class="github nav-link">Dmitry863</a></div>
-        <a href="https://rs.school/js/" class="rss"><img class="rss" src="/assets/img/rs_school_js.svg" alt="logo"/></a>
+        <a href="https://rs.school/js/" class="rss"><img class="rss" src="assets/img/rs_school_js.svg" alt="logo"/></a>
       </div>
     </footer>
   </body>
